# thepoint-ansible

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  all.aws_ec2.yml  ansible.cfg  aws_deploy.yml  aws_provision.yml  pyproject.toml  requirements.txt  requirements.yml  requirements_test.txt
group_vars/aws_ec2/: vars.yml
group_vars/tag_Role_thepoint_docker/: vars.yml
group_vars/tag_Role_thepoint_website/: vars.yml
host_vars/localhost/: aws.yml
roles/aws/files/: seelog.xml.template
roles/aws/handlers/: main.yml
roles/aws/tasks/: main.yml
roles/aws/templates/: cloudwatch.json  cloudwatch.json.j2  cloudwatch.toml.j2  cloudwatch.yaml.j2  logrotate_upload  ssm.json.j2  vector.yaml.j2
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/tasks/: main.yml
roles/django_db/defaults/: main.yml
roles/django_db/files/: pg_hba.conf
roles/django_db/handlers/: main.yml
roles/django_db/tasks/: main.yml
roles/django_db/templates/: postgresql.conf
roles/django_nginx/files/: logrotate_django  update_cloudflare_ips.sh
roles/django_nginx/handlers/: main.yml
roles/django_nginx/tasks/: main.yml
roles/django_nginx/templates/: cloudflare  sources.list
roles/docker/handlers/: main.yml
roles/docker/tasks/: main.yml
roles/docker_nginx/defaults/: main.yml
roles/docker_nginx/filter_plugins/: filters.py
roles/docker_nginx/handlers/: main.yml
roles/docker_nginx/tasks/: main.yml
roles/docker_nginx/templates/: nginx.conf
roles/docker_runner/defaults/: main.yml
roles/docker_runner/handlers/: main.yml
roles/docker_runner/tasks/: main.yml
roles/s3_storage/defaults/: main.yml
roles/s3_storage/tasks/: main.yml
roles/s3_storage/vars/: main.yml
roles/thepoint_ec2/defaults/: main.yml
roles/thepoint_ec2/tasks/: main.yml
roles/thepoint_website/defaults/: main.yml
(+17 files in other folders)
