[tool.poetry]
name = "thepoint-ansible"
version = "2.4.0"
description = ""
authors = ["Craig Holyoak <craig@helmsdeep.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mitogen = "^0.3.14"
ansible = "^10.5"
ansible-lint = { version = "^24.9", markers = "platform_system != 'Windows'" }
jinja2 = "^3.1"
pyyaml = "^6.0"
boto = "^2.49"
boto3 = "^1.35"
cryptography = "^43.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7"
